--- a/enar_original.ipynb
+++ b/enar_original.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ad_dat = pd.read_csv('/Users/lakeside/Documents/ENAR CONFERENCE/brfss_data.csv')"
+    "ad_dat = pd.read_csv('/Users/lakeside/Documents/ENAR CONFERENCE/data_cleaned.csv')"
    ]
   },
   {
